# ocrload

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  ENHANCED_INVOICE_ACCURACY_PLAN.md  README.md  TASK_20_SUMMARY.md  debug_api_response.py  debug_claude_response.json  debug_claude_response.py  debug_database_format.json  debug_delivery_markdown.txt  debug_markdown.txt  debug_missing_policy.py  docker-compose.production.yml  docker-compose.yml  pyproject.toml  test_accessorial_workflow.py  test_agreement_parser_comprehensive.py  test_agreement_parser_integration.py  test_agreement_parser_unit.py  test_api_integration.py  test_bol_database_integration.py  test_bol_extraction_analysis.py  test_cdl_parser_unit.py  test_coi_parser_unit.py  test_datalab_connection.py  test_datalab_real.py  test_debug_accessorial.py  test_delivery_final.py  test_delivery_simple.py  test_delivery_workflow.py  test_detailed_bol_extraction_analysis.py  test_detailed_extraction_analysis.py  test_enhanced_bol_workflow.py  test_enhanced_invoice_system.py  test_enhanced_lumper_workflow.py  test_focused_bol_extraction.py  test_image_preprocessing.py  (+17 more)
.github/workflows/: ci.yml
app/: exceptions.py  main.py
app/config/: settings.py
app/models/: __init__.py  database.py  responses.py
app/routers/: __init__.py  health.py  media.py  monitoring.py  parse_test.py
app/services/: README.md  __init__.py  context_gate.py  database_flag_service.py  document_matching_engine.py  document_service.py  document_storage.py  document_storage_README.md  enhanced_accessorial_extractor.py  enhanced_bol_extractor.py  enhanced_delivery_extractor.py  enhanced_invoice_extractor.py  enhanced_lumper_extractor.py  image_preprocessor.py  performance_monitor.py  redis_event_service.py  semantic_bol_extractor.py  semantic_invoice_extractor.py  semantic_lumper_extractor.py  supabase_client.py
docs/: CI_PIPELINE_SETUP.md
scripts/: freight_intelligence_prd.txt  migrate_documents_table.py  prd.txt  task-complexity-report.json  test_ci_locally.sh  test_docker_config.py  validate_docker_security.py
test_documents/: README.md
tests/: test_datalab_integration.py  test_datalab_ocr.py  test_document_storage.py  test_health.py  test_media_endpoint_real.py  test_models.py  test_supabase_client.py  test_supabase_integration.py
tests/integration/: test_agreement_parser_comprehensive.py  test_agreement_parser_integration.py  test_cdl_parser_integration.py  test_coi_parser_edge_cases.py  test_coi_parser_integration.py  test_database_flag_service_integration.py  test_error_handling.py  test_full_processing_pipeline.py  test_marker_integration.py  test_parse_test_endpoint.py  test_performance_monitoring.py  test_real_database_integration.py  test_real_documents.py  test_real_integrations.py  (+4 more)
(+36 files in other folders)
